learned lists, entities, classes and semantics

--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
     </head>
 
     <body>
-        <h1>Hello Reed </h1>
+        <h1>&#174eed's Website &#60 &#62 </h1>
 
         <p> This could be some normal text. <b> Or it could be bolded. </b> <i>Or italicized. </i> </p>
         <p> It could even be <mark> highlighted. </mark></p>
         <img width="300" height="350" src="images/cedric-vt-ua0SnGdN-m8-unsplash (1).jpg">
         <p></p>
-        <a target="_blank"  href="https://www.youtube.com/watch?v=vyu6KywD_f0&ab_channel=ReedGoldsworthy"> You can link to other stuff</a>
+        <a target="_blank"  href="https://www.youtube.com/watch?v=vyu6KywD_f0&ab_channel=ReedGoldsworthy"> You can link to videos</a>
+        <p></p>
+        <a href="/about.html"> or a different page</a>
     </body>
 
 </html>
