Learned how to color text with css

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <a target="_blank"  href="https://www.youtube.com/watch?v=vyu6KywD_f0&ab_channel=ReedGoldsworthy"> You can link to videos</a>
         <p></p>
         <a href="/about.html"> or a different page</a>
+        <h3> <a href="/magic.html" > Here is CSS stuff </a></h3>
     </body>
 
 </html>
