--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title> Reed's Website </title>
 
+        <title> Test </title>
         <meta name="description" conent="This is Reed's test website">
         <meta charset="UTF-8">
         <meta name="robots" content="index, follow">
