--- a/index.html
+++ b/index.html
@@ -1,29 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title> Reed's Website </title>
-
-        <title> Test </title>
-        <meta name="description" conent="This is Reed's test website">
         <meta charset="UTF-8">
-        <meta name="robots" content="index, follow">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <link rel="icon" href="/images/animal_toy_stuffedanimal_doll_cat_dog_2744.png">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width-device-width">
+
+        <title>Personal Portfolio Website</title>
+        <link rel="stylesheet" href="style.css">
 
     </head>
 
     <body>
-        <h1>&#174eed's Website &#60 &#62 </h1>
+        <div id="header">
+            <div class="container">
+                <nav>
+                    <img src="images/animal_toy_stuffedanimal_doll_cat_dog_2744.png" class="logo">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Projects</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
 
-        <p> This could be some normal text. <b> Or it could be bolded. </b> <i>Or italicized. </i> </p>
-        <p> It could even be <mark> highlighted. </mark></p>
-        <img width="300" height="350" src="images/cedric-vt-ua0SnGdN-m8-unsplash (1).jpg">
-        <p></p>
-        <a target="_blank"  href="https://www.youtube.com/watch?v=vyu6KywD_f0&ab_channel=ReedGoldsworthy"> You can link to videos</a>
-        <p></p>
-        <a href="/about.html"> or a different page</a>
-        <h3> <a href="/magic.html" > Here is CSS stuff </a></h3>
+                <div class="header-text">
+                    <h1>Reed Goldsworthy</h1>
+
+                    <div class="singleCol">
+                            <a class="social-icon1" href="https://github.com/ReedGoldsworthy" target="_blank">
+                                <ion-icon name="logo-github"></ion-icon>
+                            </a>
+        
+                            <a class="social-icon2" href="https://www.linkedin.com/in/reed-goldsworthy-00893215a/" target="_blank">
+                                <ion-icon name="logo-linkedin"></ion-icon>
+                            </a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+
+        <!------------------------    About     ------------------------------->
+        <div id="about">
+            <div class="container">
+                <div class="row">
+                    <div class="about-col-1">
+                        <img src="images/family.jpg">
+                    </div>
+                    <div class="about-col-2">
+                        <h1 class="sub-title">About Me</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident repellat cum ut tempore ipsam aspernatur velit, expedita animi hic tenetur atque quis odio sapiente, mollitia ipsum ullam optio iste quasi.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!------------------------    end of About     ------------------------------->
+
+        <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+        <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
     </body>
 
 </html>
