centered text on home screen

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </nav>
 
                 <div class="header-text">
-                    <h1>Reed Goldsworthy</h1>
+                    <h1 class="name">Reed Goldsworthy</h1>
 
                     <div class="singleCol">
                             <a class="social-icon1" href="https://github.com/ReedGoldsworthy" target="_blank">
