fixed weightlifting github link

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 								<p>A full stack web application useful for analyzing playlists or creating new ones</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/lifting-tracker.png" class="image fit thumb"><img src="images/thumbs/lifting-tracker.png" alt="" /></a>
+								<a href="https://github.com/ReedGoldsworthy/lifting-tracker-backend" class="image fit thumb"><img src="images/thumbs/lifting-tracker.png" alt="" /></a>
 								<h3>Weight Lifting Tracker</h3>
 								<p>This web app helps you log and analyze your workouts and track progress for your strength training journey.</p>
 							</article>
